kubernetes/apps/default/uptime-kuma/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: default
spec:
  selector:
    app: uptime-kuma
  ports:
    - name: uptime-kuma
      port: 3001
